<resources>
    <string name="app_name">Medicine Calendar</string>
    <string name="action_settings">Settings</string>
    <string name="add_new_item">Add new item</string>
    <string name="medicine_name">Medicine name</string>
    <string name="quantity">Quantity</string>
    <string name="daily_usage">Daily usage</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="medicine_name_cannot_be_blank">Medicine name cannot be blank.</string>
    <string name="quantity_cannot_be_blank">Quantity cannot be blank.</string>
    <string name="daily_usage_cannot_be_blank">Daily usage cannot be blank.</string>
    <string name="last_day_of">Last day of</string>
    <string name="supply">supply</string>
    <string name="expected_quantity_today">Expected quantity today</string>
    <string name="daily_usage_is_0">Daily usage is 0.</string>
    <string name="enough_until">Enough until</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete</string>
    <string name="empty_view_text">To add medicine press plus button above.\n\nTo get correct results subtract medicines that you are going to take today from the entire stock, and enter result in the next screen.</string>
</resources>
