<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEditActivity"
    android:background="@drawable/card_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/medicineNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medicine_name"/>

    <EditText
        android:id="@+id/medicineNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/medicine_name"
        android:inputType="text"/>

    <TextView
        android:id="@+id/medicineQuantityTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantity"/>

    <EditText
        android:id="@+id/medicineQuantityEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:inputType="number"/>

    <TextView
        android:id="@+id/medicineDailyUsageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daily_usage"/>

    <EditText
        android:id="@+id/medicineDailyUsageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/daily_usage"
        android:inputType="number"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"/>

</LinearLayout>